Use bundle to run rspec

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
  - hiptest-publisher -c rspec.conf --test-run-id=1354 --only=tests
 
 script:
- - rspec --format RspecJunitFormatter -o report.xml
+ - bundle exec rspec --format RspecJunitFormatter -o report.xml
 
 after_script:
   - hiptest-publisher -c rspec.conf --push=report.xml --test-run-id=1354
