Use token from Travis settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ sudo: false
 
 before_install:
  - gem install hiptest-publisher
- - hiptest-publisher -c rspec.conf --test-run-id=1354 --only=tests
+ - hiptest-publisher -c rspec.conf --token=$SECRET_TOKEN --test-run-id=1354 --only=tests
 
 script:
  - bundle exec rspec --format RspecJunitFormatter -o report.xml
 
 after_script:
-  - hiptest-publisher -c rspec.conf --push=report.xml --test-run-id=1354
+  - hiptest-publisher -c rspec.conf --token=$SECRET_TOKEN --push=report.xml --test-run-id=1354
