Use correct source project

--- a/rspec.conf
+++ b/rspec.conf
@@ -1,4 +1,5 @@
-site  = 'https://hiptest.net'
+site = 'http://localhost:3000'
+token = 421360154943018515240600185625994599034365123018500267621
 language = 'ruby'
 output_directory = './spec'
 push_format = junit
