--- a/rspec.conf
+++ b/rspec.conf
@@ -1,3 +1,4 @@
+token = '48350436106580673826569748169524069014255851750058587929'
 site  = 'https://hiptest.net'
 language = 'ruby'
 output_directory = './spec'
