--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 
 before_install:
  - gem install hiptest-publisher
- - hiptest-publisher -c rspec.conf --token=$SECRET_TOKEN --test-run-id=1354 --only=tests
+ - hiptest-publisher -c rspec.conf  --test-run-id=136446 --only=tests
 
 script:
  - bundle exec rspec --format RspecJunitFormatter -o report.xml
