--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
  - bundle exec rspec --format RspecJunitFormatter -o report.xml
 
 after_script:
-  - hiptest-publisher -c rspec.conf --token=$SECRET_TOKEN --push=report.xml --test-run-id=1354
+  - hiptest-publisher -c rspec.conf --push=report.xml --test-run-id=136446
